[gd_scene load_steps=4 format=3 uid="uid://df2lq0k5vwt5e"]

[ext_resource type="Script" path="res://scenes/army/army.gd" id="1_jjffo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xksjw"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_y27y1"]
margin = 0.0
height = 1.0

[node name="Army" type="CharacterBody3D" groups=["army"]]
transform = Transform3D(0.024, 0, 0, 0, 0.024, 0, 0, 0, 0.024, 0, 0, 0)
script = ExtResource("1_jjffo")

[node name="Shape" type="CSGCylinder3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
layers = 2
height = 1.0
material = SubResource("StandardMaterial3D_xksjw")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CylinderShape3D_y27y1")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
